# example-juce-plugin-webview

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: Browser.cxx  Browser.hxx  Editor.cxx  Editor.hxx  Global.hxx  Processor.cxx  Processor.hxx
